<resources>
    <string name="app_name">Carcassonne</string>
    <string name="btnRegeln">Regeln</string>
    <string name="btnAbout">About</string>
    <string name="btnSettings">Optionen</string>
    <string name="appTitle">Space Carcassonne</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_start">Start</string>
    <string name="title_group_owner">Group Owner</string>
    <string name="text_start_game">Start Game</string>
    <string name="text_discover_peers">Search for devices</string>
    <string name="text_device_info">Device-Info</string>
    <string name="status_available">Available</string>
    <string name="status_invited">Invited</string>
    <string name="status_connected">Connected</string>
    <string name="status_failed">Failed</string>
    <string name="status_unavailable">Unavailable</string>
    <string name="text_lobbies" type="id">Lobbies</string>
    <string name="text_devices">Devices</string>
    <string name="text_connect">Connect</string>
    <string name="text_disconnect">Disconnect</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_create">Create</string>
    <string name="text_device_name">Device Name</string>
    <string name="text_host_address">Host-Address</string>
    <string name="text_status">Status</string>
    <string name="text_player_in_group">Players in group</string>
    <string name="text_connected_to">Connected to</string>
    <string name="text_no_group_formed">No group formed!</string>
    <string name="text_group_status">Group Status</string>
    <string name="pick_a_color">Pick a color</string>
    <string name="pick_a_race"> Choose your Race</string>
    <string name="terran">Terran</string>
    <string name="protoss">Protoss</string>
    <string name="zerg">Zerg</string>
    <string name="goauld">Goa\'Uld</string>
    <string name="dalek">Dalek</string>
    <string name="klingon">Klingon</string>
    <string name="federation">Federation</string>
    <string name="scientology">Scientology</string>
    <string name="superSajan">SuperSaiyajin</string>

    <string-array name="colors">
        <item name="red">red</item>
        <item name="green">green</item>
        <item name="blue">blue</item>
        <item name="yellow">yellow</item>
        <item name="black">black</item>

    </string-array>
    <string name="text_refresh">Refresh</string>
    <string name="text_search_for_peers">Searching for near devices ...</string>
    <string name="title_activity_start_game">StartGame</string>
    <string name="title_activity_lobby_new">LobbyNewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="text_group">Group</string>
    <string name="text_discover_groups">Discover Groups</string>
    <string name="text_browser">Browser</string>
    <string name="text_todo">ToDo</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_player_name">Player Name</string>
    <string name="text_mac_address">MAC Address</string>
    <string name="text_join">Join</string>
    <string name="text_no_new_lobbies_found">No new groups found!</string>
    <string name="text_no_group_created">No group created yet!</string>
    <string name="text_group_name">Group Name</string>
    <string name="error_player_name">Player name cannot be empty!</string>
    <string name="text_cleanup">CleanUp</string>
    <string name="text_leave_group">Leave Group</string>
    <string name="text_close_group">Close Group</string>
    <string name="text_send">Send</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="text_overview">Overview</string>
    <string name="text_score">Score</string>
    <string name="text_center">Center</string>
    <string name="text_test_field">Test field</string>
    <string name="text_end_turn">End turn</string>
    <string name="text_settings">Settings</string>
    <string name="text_sound_effects">Effects</string>
    <string name="text_music">Music</string>

    <!-- States -->
    <string name="text_state_waiting">Waiting for player</string>
    <string name="text_state_draw_card">Draw card</string>
    <string name="text_state_place_card">Place card</string>
    <string name="text_state_place_peep">Place peep</string>
    <string name="text_state_end_turn">End turn</string>
    <string name="text_main_menu">Return to main menu</string>
    <string name="text_rules">Rules</string>
    <string name="text_rotate">Rotate</string>
    <string name="text_peep">Peep</string>
    <string name="text_x">X</string>
    <string name="text_debugging">Debug</string>
    <string name="cheater">Cheater</string>

</resources>
