<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_instanceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_player_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_deviceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_device_name" />

        <TextView
            android:id="@+id/textView_macAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_mac_address" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_service_action"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_join" />
    </LinearLayout>

</LinearLayout>
