<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".gui.field.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/switch_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_music"
            android:textColor="@color/yellow"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/switch_sound_effects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_sound_effects"
            android:textColor="@color/yellow"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_main_menu" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>