<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context="distudios.at.carcassonne.gui.groups.Group2Activity">


    <ImageButton
        android:id="@+id/imageButton_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:contentDescription=""
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_info_details" />


    <TextView
        android:id="@+id/textView_lable"
        android:layout_width="235dp"
        android:layout_height="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:fontFamily="SF Distant Galaxy"
        android:text="@string/pick_a_race"
        android:textAlignment="center"
        android:textColor="#d9bd00"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView_lable">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/terran"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:fontFamily="SF Distant Galaxy"
                android:text="@string/terran"
                android:textColor="#d9bd00"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/zerg"
                android:layout_width="wrap_content"
                android:layout_height="30dp"

                android:layout_weight="1"
                android:background="#00000000"
                android:fontFamily="SF Distant Galaxy"
                android:text="@string/zerg"
                android:textColor="#d9bd00"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/protoss"
                android:layout_width="wrap_content"
                android:layout_height="30dp"

                android:layout_weight="1"
                android:background="#00000000"
                android:fontFamily="SF Distant Galaxy"
                android:text="@string/protoss"
                android:textColor="#d9bd00"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView_lable"
            tools:layout_editor_absoluteX="8dp">

            <Button
                android:id="@+id/goauld"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:fontFamily="SF Distant Galaxy"
                android:text="@string/goauld"
                android:textColor="#d9bd00"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/dalek"
                android:layout_width="wrap_content"
                android:layout_height="30dp"

                android:layout_weight="1"
                android:background="#00000000"
                android:fontFamily="SF Distant Galaxy"
                android:text="@string/dalek"
                android:textColor="#d9bd00"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/klingon"
                android:layout_width="wrap_content"
                android:layout_height="30dp"

                android:layout_weight="1"
                android:background="#00000000"
                android:fontFamily="SF Distant Galaxy"
                android:text="@string/klingon"
                android:textColor="#d9bd00"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView_lable"
            tools:layout_editor_absoluteX="8dp">

            <Button
                android:id="@+id/federation"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="#00000000"
                android:fontFamily="SF Distant Galaxy"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/federation"
                android:textColor="#d9bd00"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/scientology"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="#00000000"
                android:fontFamily="SF Distant Galaxy"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/scientology"
                android:textColor="#d9bd00"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/supersajan"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="#00000000"
                android:fontFamily="SF Distant Galaxy"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/superSajan"
                android:textColor="#d9bd00"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
